style.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
    font-size: 10px;
}

:root {
    --background-color: rgb(255, 255, 255);
    --grey-color: rgb(96, 96, 96);
    --title-font: 'Unbounded', 'Arial';
    --text-font: 'Open+Sans', 'Arial';
    --green-lighter: rgb(105, 152, 61);
    --green-darker: rgb(75 107 43);
}

/* starting from iPhone SE5 (small) */

.nav-bar {
    display: flex;
    justify-content: space-between;
    width: 100vw;
    height: 80px;
    background-color: var(--background-color)
}

.nav-bar .logo1,
.nav-bar .logo2 {
    height: 100%;
    width: 30%;
}

.nav-bar .logo img {
    height: 100%;
}

.nav-bar .hamburger {
    width: 80px;
    position: relative;
}

.nav-bar .hamburger i {
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2rem;
}

.introduction {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 100%;
    height: 90vh;
    background-image: url(./images/backgrounds/drewniany-dom-ogrod-mobile-small-portrait.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

.introduction h1 {
    font-family: var(--title-font);
    color: var(--background-color);
    font-size: 2.8rem;
    padding: 10px 20px;
    letter-spacing: 2px;
    line-height: 120%;
    font-weight: 900;
    text-align: center;
}

.introduction p {
    font-family: var(--title-font);
    color: var(--background-color);
    padding: 10px 20px 10px 20px;
    letter-spacing: 1.5px;
    line-height: 150%;
    font-size: 1.3rem;
    font-weight: 800;
    text-align: center;
}

.introduction button {
    width: 65%;
    margin: 0 auto 10px auto;
    font-family: var(--title-font);
    background-color: var(--green-darker);
    height: 40px;
    border: none;
    border-radius: 5%;
    font-size: 1.2rem;
    color: var(--background-color);
    font-weight: 600;
    letter-spacing: 1.5px;
}

